--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   number: 0
-  noarch: python
+  noarch: python >= 3
   script: {{ PYTHON }} -m pip install . --no-deps -vv
 
 requirements:
